// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input - basic functionality: input has correct props 1`] = `
Object {
  "aria-invalid": false,
  "aria-required": false,
  "id": undefined,
  "name": "",
  "onKeyDown": [MockFunction],
  "onKeyPress": [MockFunction],
  "onKeyUp": [MockFunction],
  "placeholder": "Placeholder",
  "styled-component": "true",
  "type": "text",
}
`;

exports[`Input - renders enhancers: input has correct props when end enhancers added 1`] = `
Object {
  "$adjoined": "right",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <StyledInput
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-invalid={false}
      aria-required={false}
      name=""
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="right"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "onBlur": [Function],
  "onFocus": [Function],
}
`;

exports[`Input - renders enhancers: input has correct props when enhancers added 1`] = `
Object {
  "$adjoined": "both",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <StyledInput
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-invalid={false}
      aria-required={false}
      name=""
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="both"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "onBlur": [Function],
  "onFocus": [Function],
}
`;

exports[`Input - renders enhancers: input has correct props when start enhancers added 1`] = `
Object {
  "$adjoined": "left",
  "$disabled": false,
  "$error": false,
  "$isFocused": false,
  "$required": false,
  "$size": "default",
  "children": Array [
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
    <StyledInput
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $ref={
        Object {
          "current": null,
        }
      }
      $required={false}
      $size="default"
      aria-invalid={false}
      aria-required={false}
      name=""
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      type="text"
    />,
    <NullComponent
      $adjoined="left"
      $disabled={false}
      $error={false}
      $isFocused={false}
      $required={false}
      $size="default"
    />,
  ],
  "onBlur": [Function],
  "onFocus": [Function],
}
`;
